# LaunchPad

./: .gitignore  CHAT_LOG.md  CONTRIBUTING.md  COURSE_FEATURES.md  LICENSE  LaunchPad.bat  PROJECT_STRUCTURE.md  README.md  USER_MANUAL.md  main-simple.js  main.js  manifest.json  package-lock.json  package.json  preload.js  serve.js  tauri-setup.md  test-electron.js  web-styles.css  web-version.html
.amazonq/: chat-resume.txt
.github/: FUNDING.yml
src/: budget-manager.js  index.html  renderer-extensions.js  renderer.js  risk-manager.js  stakeholder-manager.js  styles.css  tutorial.css  tutorial.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
