[package]
name = "launchpad"
version = "1.0.0"
description = "Universal project management app for any structured project"
authors = ["Michael Rewiri-Thorsen"]
license = "MIT"
repository = "https://github.com/mikeartee/LaunchPad"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]